# pv_layout_project

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  DEPLOYMENTS.md  README.md  RELEASE.md  docker-compose.yml  eslint.config.js  package.json  tsconfig.json  turbo.json
.claude/: CLAUDE.md
.github/workflows/: build-lambdas.yml  build-layout-engine.yml  build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  platform-deployment.yml  release.yml  sidecar-build.yml
_re_temp/: .env.example  .gitignore  tsconfig.json  turbo.json
apps/api/: .gitignore  CLAUDE.md  eslint.config.js  package.json  tsconfig.json
apps/desktop/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: keyring.rs  lib.rs  main.rs  menu.rs  sidecar.rs
apps/layout-engine/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml
apps/layout-engine/src/: db_client.py  handlers.py  lambda_handler.py  s3_client.py  server.py  svg_exporter.py
apps/layout-engine/src/core/: dxf_exporter.py  energy_calculator.py  kmz_parser.py  la_manager.py  road_manager.py  spacing_calc.py  string_inverter_manager.py
apps/layout-engine/src/models/: project.py
apps/layout-engine/src/tests/: test_db_client.py  test_handlers_prod.py  test_lambda_handler.py  test_server.py  test_svg_exporter.py
apps/layout-engine/src/utils/: geo_utils.py
apps/mvp_admin/: eslint.config.js  next.config.mjs  package.json  postcss.config.mjs  proxy.ts  vitest.config.ts  vitest.setup.ts
apps/mvp_api/: .env.example  eslint.config.js  package.json  tsconfig.json  vercel.json
apps/mvp_dashboard/: .gitignore  package.json  tsconfig.json
apps/mvp_web/: eslint.config.js  middleware.ts  next.config.mjs  package.json  postcss.config.mjs  proxy.ts  tsconfig.json  vitest.config.ts
apps/web/: .env.example  CLAUDE.md  components.json  next.config.mjs  package.json  postcss.config.mjs  proxy.ts  tsconfig.json  vitest.setup.ts
docs/: ARCHITECTURE.md  AWS_RESOURCES.md  DEPLOYMENTS.md  DESIGN_FOUNDATIONS.md  PLAN.md  RELEASE.md  SPIKE_PLAN.md  architecture.md  brand-voice.md  claude-dev-principles.md  collaborative-testing-protocol.md  feature-catalog.md  iam-policy-github-actions.json  iam-policy-re-app-s3.json  use-cases.md  ux-design.md
docs/adr/: 0001-online-required-entitlements.md  0002-no-basemap.md  0003-state-architecture.md  0004-cloud-as-passive-storage.md  0005-feature-key-registry.md  README.md  (+2 more)
python/lambdas/parse-kmz/: .dockerignore  Dockerfile  README.md  pyproject.toml
python/lambdas/parse-kmz/parse_kmz_lambda/: handler.py  server.py  validator.py
python/lambdas/parse-kmz/tests/: fixtures.py  test_handler.py  test_validator.py
python/lambdas/smoketest/: .dockerignore  Dockerfile  README.md  pyproject.toml
python/lambdas/smoketest/smoketest_lambda/: handler.py  server.py
python/lambdas/smoketest/tests/: test_handler.py
python/pvlayout_core/: README.md  pyproject.toml
python/pvlayout_core/pvlayout_core/: __init__.py
python/pvlayout_core/pvlayout_core/core/: icr_placer.py  kmz_exporter.py  ond_parser.py  pdf_exporter.py  pvgis_file_parser.py
python/pvlayout_core/pvlayout_core/utils/: geo_utils.py
python/pvlayout_core/tests/golden/kmz/: Kudlugi Boundary (89 acres).kmz  complex-plant-layout.kmz  phaseboundary2.kmz
python/pvlayout_core/tests/parity/: test_kmz_parser_parity.py  test_la_placement_parity.py  test_layout_engine_parity.py  test_p00_bundled_mst_parity.py  test_satellite_water_detector_parity.py  test_solar_transposition_parity.py  test_tracker_layout_engine_parity.py
python/pvlayout_core/tests/unit/: test_visibility_graph.py
python/pvlayout_engine/: README.md  pvlayout-engine.spec  pyproject.toml
python/pvlayout_engine/pvlayout_core/core/: dxf_exporter.py  edition.py  energy_calculator.py  kmz_exporter.py  kmz_parser.py  la_manager.py  layout_engine.py  pan_parser.py  pdf_exporter.py  pvgis_file_parser.py  road_manager.py  satellite_water_detector.py  solar_transposition.py  spacing_calc.py  string_inverter_manager.py  tracker_layout_engine.py
python/pvlayout_engine/pvlayout_core/models/: project.py
python/pvlayout_engine/pvlayout_engine/: __init__.py  adapters.py  config.py  geometry.py  main.py  schemas.py  server.py  session.py  thumbnail.py
python/pvlayout_engine/pvlayout_engine/routes/: __init__.py  dxf.py  kmz.py  layout.py  layout_jobs.py  pdf.py  session.py  thumbnail.py  water.py
python/pvlayout_engine/scripts/: capture_golden.py  smoke_binary.sh  smoke_parallel.sh
python/pvlayout_engine/scripts/debug/: time_cable_calc.py
python/pvlayout_engine/scripts/parity/: analyze_aisle_routing.py  capture_legacy_baseline.py  detect_legacy_overshoots.py  generate_overshoot_report_pdf.py  generate_unified_compliance_pdf.py  probe_pattern_stats.py
python/pvlayout_engine/scripts/perf/: benchmark_cable_calc.py  benchmark_compare.py  benchmark_consolidated.py
python/pvlayout_engine/tests/golden/: test_layout_parity.py
python/pvlayout_engine/tests/golden/expected/: Kudlugi Boundary (89 acres).json  phaseboundary.json  phaseboundary2.json
python/pvlayout_engine/tests/golden/kmz/: phaseboundary.kmz
python/pvlayout_engine/tests/integration/: test_cable_routing_constraints.py  test_detect_water_route.py  test_export_dxf.py  test_export_kmz.py  test_export_pdf.py  test_layout_jobs.py  test_layout_s10_wgs84.py  test_layout_s11_5_cables.py  test_layout_thumbnail.py  test_layout_wgs84_corners.py  test_s11_endpoints.py  test_server.py  test_session.py
python/pvlayout_engine/tests/parity/: test_energy_calculator_parity.py  test_kmz_parser_parity.py  test_la_placement_parity.py  test_layout_engine_parity.py  test_p00_bundled_mst_parity.py  test_tracker_layout_engine_parity.py
python/pvlayout_engine/tests/smoke/: test_adapters_s10.py  test_imports.py  test_schemas.py
(+706 files in other folders)
