[project]
name = "pvlayout-engine"
version = "0.0.0"
description = "SolarLayout desktop sidecar — FastAPI wrapper around the layout engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "SolarLayout" }
]
# Runtime dependencies.
# - pvlayout_core (domain) — from S1:
#     shapely, pyproj, simplekml, matplotlib (PDF-only, Agg backend), numpy, ezdxf
# - pvlayout_engine (HTTP sidecar) — from S2:
#     fastapi (with pydantic v2), uvicorn (ASGI server)
dependencies = [
    # Domain libs (vendored from PVlayout_Advance)
    "shapely>=2.0",
    "pyproj>=3.5",
    "simplekml>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "ezdxf>=1.0",
    "Pillow>=10.0",  # row #5: satellite tile fetch + preview PNG generation
    "requests>=2.32",  # row #8: PVGIS / NASA POWER irradiance fetch in energy_calculator

    # HTTP sidecar
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.20",  # /parse-kmz multipart upload support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyinstaller>=6.11",  # S4: single-binary sidecar build
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pvlayout_engine", "pvlayout_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
