[project]
name = "pvlayout-engine"
version = "0.0.0"
description = "SolarLayout desktop sidecar — FastAPI wrapper around the layout engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "SolarLayout" }
]
dependencies = [
    # Domain library (path-dep — see [tool.uv.sources] below). Brings
    # in shapely / pyproj / simplekml / matplotlib / numpy / ezdxf /
    # Pillow / requests transitively. Owned by python/pvlayout_core/
    # per cloud-offload spec D6.
    "pvlayout-core",

    # HTTP sidecar deps — engine-only.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.20",  # /parse-kmz multipart upload support
]

[tool.uv.sources]
pvlayout-core = { path = "../pvlayout_core", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyinstaller>=6.11",  # S4: single-binary sidecar build
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pvlayout_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Slow tests are opt-in. Default `pytest tests/` (CI + local) skips
# anything marked `slow`. To run them explicitly:
#   pytest -m slow tests/        # only slow
#   pytest -m '' tests/          # everything (override the marker filter)
markers = [
    "slow: long-running test; opt-in (default skipped). One-time correctness audits, full PV engine on real KMZ fixtures, etc. Run on demand only.",
]
addopts = ["-m", "not slow"]
