[package]
name = "solarlayout-desktop"
version = "0.0.0"
description = "SolarLayout — native desktop shell"
edition = "2021"
rust-version = "1.75"

[lib]
name = "solarlayout_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "solarlayout-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "process", "io-util", "time"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
# S7: OS credential store for the license key. apple-native / linux-native /
# windows-native features select the platform-native backend; no third-party
# DBus or Wincred shims pulled in.
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
