[project]
name = "parse-kmz-lambda"
version = "0.0.0"
description = "parse-kmz Lambda — fetches KMZ from S3, parses via pvlayout_core, validates domain rules, returns ParsedKmz."
requires-python = ">=3.12"
dependencies = [
  "pvlayout-core",
  "boto3>=1.35",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "moto[s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parse_kmz_lambda"]

[tool.uv.sources]
pvlayout-core = { path = "../../pvlayout_core", editable = true }
