[project]
name = "smoketest-lambda"
version = "0.0.0"
description = "Throwaway smoketest Lambda — proves the C3 build/push plumbing. Deleted in C4."
requires-python = ">=3.12"
dependencies = [
  "pvlayout-core",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smoketest_lambda"]

[tool.uv.sources]
pvlayout-core = { path = "../../pvlayout_core", editable = true }
